--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,124 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+.container {
+	width: 900px;
+	margin:  0 auto; 
+}
+
+header nav {
+	display: inline-block;
+	margin-top: 35px;
+	
+}
+
+header nav a {
+	margin: 0 20px;
+	color: gray;
+	font-size: 13px;
+
+}
+
+header img.logo {
+	margin-left: 140px;
+}
+
+section.abc button {
+	font-size: 15px;
+	padding: 4px 32px;
+	border: .5px solid;
+	display: block;
+	margin-left: 150px;
+}
+
+section.abc img {
+	margin-left: 500px;
+	margin-bottom: 60px;
+	margin-top: -330px;
+	width: 35%;
+	
+}
+
+h1 {
+	text-align: center;
+	font-size: 69px;
+	display: inline-block;
+	width: 480px;
+	margin-top: 130px;
+	
+}
+h4 {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.middle-img {
+	margin-left: 30px;
+	width: 90%;
+}
+
+.main-content .top-content p {
+	margin-bottom: 20px;
+}
+
+h4 {
+	font-size: 13px;
+	margin-top: 15px;
+}
+
+
+.main-content .top-content .text-content {
+	 display: inline-block; 
+	 width: 420px; 
+	 padding: 10px;
+	 font-size: 15px;
+	 margin-left: 20px;
+	
+}
+
+section.main-content {
+	border-top: 1px solid;
+}
+
+.main-content .bottom-content .text-content {
+	display: inline-block;
+	width: 290px;
+	padding: 20px;
+	font-size: 15px;
+
+
+}
+
+section.contact {
+	margin-left: 28px;
+	margin-bottom: 15px;
+	border-top: 1px solid;
+	font-size: 13px;
+}
+footer p {
+	text-align: center;
+	margin-bottom: 70px;
+	font-size: 11px;
+}
+
+section .phone {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
